# php-native-symbols

./: .gitignore  .mcp.json  Cargo.toml  LICENSE-MIT  NOTICE  README.md
.claude/: settings.json
.claude/hooks/: cargo-quality.sh
.codex/: hooks.json
.codex/hooks/: cargo-quality.sh
.github/workflows/: ci.yml
benches/: lookup.rs
docs/: expansion-spec.md  maintenance-plan.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: lookup_symbols.rs  parse_version.rs
graphify-out/: .graphify_labels.json  .graphify_python  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-06-29/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.json  manifest.json
graphify-out/cache/: stat-index.json
src/: availability.rs  changes.rs  classes.rs  compatibility.rs  constants.rs  extension.rs  lib.rs  lookup.rs  provenance.rs  query.rs  sources.rs  symbols.rs  version.rs
tests/: compatibility.rs  invariants.rs  phase1.rs  provenance.rs  public_api.rs  readme_examples.rs  serde.rs
tools/regenerate/: Cargo.toml  README.md
tools/regenerate/src/: curation.rs  lifecycle.rs  main.rs  methods.rs  phpcompat.rs  render.rs  source.rs  spec.rs  stubs.rs  version.rs
