[package]
name = "php-native-symbols"
version = "0.4.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
description = "Version-availability data for PHP's native functions, constants and classes."
repository = "https://github.com/MarjovanLier/php-native-symbols"
readme = "README.md"
# Developer-only tooling, never part of the published crate.
exclude = [".claude", ".codex", ".github"]

[dependencies]

# The library has no runtime dependencies. The offline table generator is a
# separate workspace member (tools/regenerate) with its own dependencies and is
# never part of the published crate.

[dev-dependencies]
# Test-only: property tests for PhpVersion parsing and ordering. Not a runtime
# dependency and not part of the published crate's build for consumers.
proptest = "1"

[workspace]
members = ["tools/regenerate"]
