[package]
name = "php-native-symbols"
version = "1.4.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
description = "Version-availability data for PHP's native functions, constants and classes."
repository = "https://github.com/MarjovanLier/php-native-symbols"
readme = "README.md"
keywords = ["php", "version", "compatibility", "availability", "static-analysis"]
categories = ["development-tools"]
# Developer-only tooling, never part of the published crate. The generated
# tables under src/generated/ are the shipped data and are packaged.
exclude = [".claude", ".codex", ".github", "fuzz", "tools"]

# cargo-llvm-cov sets cfg(coverage_nightly) on its nightly run (see the
# coverage(off) attributes on the test modules). Declare it so the name is known
# and `cargo clippy -- -D warnings` stays clean when the cfg is absent.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }

# The default library build has no runtime dependencies. The offline table
# generator is a separate workspace member (tools/regenerate) with its own
# dependencies and is never part of the published crate.

[features]
serde = ["dep:serde"]

[dev-dependencies]
# Test-only: property tests for PhpVersion parsing and ordering. Not a runtime
# dependency and not part of the published crate's build for consumers.
proptest = "1"

[workspace]
members = ["tools/regenerate"]
# The fuzz harness is a standalone nightly+libfuzzer crate; keep it out of the
# stable workspace so `cargo build`/`cargo test` at the root never touch it.
exclude = ["fuzz"]
