[package]
name = "regenerate"
version = "0.0.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
description = "Offline generator for php-native-symbols static tables. Never part of the published crate."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
